--- a/web/html/style.css
+++ b/web/html/style.css
@@ -107,6 +107,7 @@ body {
   padding-left: 16px;
   padding-bottom: 16px;
   flex: 1;
+  display: flex;
 }
 
 .card__head__maximize:before {
@@ -134,6 +135,5 @@ iframe {
   width: 100%;
   height: 100%;
   opacity: 95%;
-  position: relative;
-  bottom: 0;
+  flex: 1;
 }
